# popout

./: .dockerignore  .dockstore.yml  .gitignore  Dockerfile  Dockerfile.base  PANEL.md  README.md  THEORY.md  pyproject.toml
configs/: priors_v10.yaml
docs/: BIOBANK_SCALE.md  CNN.md  CONVERT.md  PRIORS.md  SWEEP_RESULTS.md  THEORY.md
popout/: __init__.py  __main__.py  _device.py  _jit_trace.py  _memcheck.py  blocks.py  build_panel.py  build_ref.py  build_superpop_freqs.py  checkpoint.py  cli.py  convert.py  datatypes.py  demo.py  em.py  fetch_map.py  fetch_ref.py  fetch_superpop_freqs.py  gmap.py  hmm.py  identity.py  identity_assignment.py  label.py  names.py  output.py  panel.py  pgen_io.py  post_em_consolidation.py  prior_spec.py  priors.py  recursive_seed.py  report.py  simulate.py  spectral.py  stats.py  vcf_io.py
scripts/: build_1kg_ref.py  push-base.sh  push.sh  smoke_test_recursive_biobank.py
tests/: conftest.py  gen_baseline_no_priors.py  profile_decode_parquet.py  profile_window_init.py  test_aim_panels.py  test_benchmark_align.py  test_benchmark_integration.py  test_benchmark_metrics.py  test_benchmark_parsers.py  test_blocks.py  test_checkpoint.py  test_cli.py  test_cli_priors.py  test_cnn_integration.py  test_cnn_model.py  test_cnn_train.py  test_convert.py  test_convert_integration.py  test_crf.py  test_decode_parquet_streaming.py  test_determinism_10k.py  test_em.py  test_hmm.py  test_hmm_streaming.py  test_identity.py  test_identity_assignment.py  test_identity_synthetic.py  test_label.py  test_names.py  test_output.py  test_panel.py  test_priors.py  (+14 more)
(+77 files in other folders)
