[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "popout"
version = "0.3.1"
description = "GPU-accelerated self-bootstrapping local ancestry inference"
requires-python = ">=3.10"
dependencies = [
    "jax[cuda12]>=0.4.20",
    "jaxlib>=0.4.20",
    "pysam>=0.22.0",
    "numpy>=1.24",
    "pandas>=1.5",
    "Pgenlib>=0.90.0",
    "scipy>=1.10",
    "psutil>=5.9",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]
monitor = ["wandb"]

[project.scripts]
popout = "popout.cli:main"

[tool.setuptools.packages.find]
include = ["popout*"]
